<resources>
    <string name="app_name">EAdminCraftzone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">addcategory</string>
    <string name="add_product">addproduct</string>
    <string name="add_slider">addslider</string>
    <string name="upload_image">Upload Image</string>
    <string name="craftzone">Craftzone</string>
    <string name="product_name">Product Name</string>
    <string name="product_mrp">Product MRP</string>
    <string name="product_description">Product Description</string>
    <string name="product_sp">Product SP</string>
    <string name="select_cover_image">Select Cover Image</string>
    <string name="select_product_image">Select Product Image</string>
</resources>