<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#B447C6"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/addcategory"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#283997"
                    android:fontFamily="@font/acme"
                    android:text="@string/add_category"
                    android:textSize="16sp"
                    tools:ignore="VisualLintButtonSize" />

                <Button
                    android:id="@+id/addproduct"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/acme"
                    android:backgroundTint="#283997"
                    android:text="@string/add_product"
                    android:textSize="18sp"
                    tools:ignore="VisualLintButtonSize" />

                <Button
                    android:id="@+id/addslider"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/acme"
                    android:backgroundTint="#283997"
                    android:text="@string/add_slider"
                    android:textSize="18sp"
                    tools:ignore="VisualLintButtonSize" />

                <Button
                    android:id="@+id/addorderdetail"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/acme"
                    android:text="Add Order Detail"
                    android:backgroundTint="#283997"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText,VisualLintButtonSize" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>